examples/good/ex3.shl
final int a =12;
int main(){
    int fib(int n){
        if(n==0) return 1;
        if(n==1) return 1;
        return fib(n-1)+fib(n-2);
    }
    for(int i=0 to a+1){
        print(fib(i));
    }
    return 0;
}

