examples/bad/ex4.shl
int foo(int a){
    return 0;
}
int main(){
    foo(1,2,3);       
    return 0;
}